package cz.mendelu.pef.xmichl.bookaroo.testTags

object BooksTestTags {
    const val TestTagBookLibSelector = "TestTagBookLibSelector"
    const val TestTagBookCard = "TestTagBookCard"
    const val TestTagBooksList = "TestTagBooksList"
    const val TestTagBookTitle = "TestTagBookTitle"
    const val TestTagBookAuthor = "TestTagBookAuthor"
    const val TestTagBookISBN = "TestTagBookISBN"
    const val TestTagBookImage = "TestTagBookImage"

    const val TestTagBookEditButton = "TestTagBookEditButton"
    const val TestTagBookAddButton = "TestTagBookEditButton"

    const val TestTagBookForm = "TestTagBookForm"

    const val TestTagBookCreateManually = "TestTagBookCreateManually"
    const val TestTagBookCreateUsingISBN = "TestTagBookCreateUsingISBN"

    const val TestTagBookTitleTextField = "TestTagBookTitleTextField"
    const val TestTagBookAuthorTextField = "TestTagBookAuthorTextField"
    const val TestTagBookISBNTextField = "TestTagBookISBNTextField"
    const val TestTagBookImageTextField = "TestTagBookImageTextField"
    const val TestTagBookLibraryTextField = "TestTagBookLibraryTextField"
    const val TestTagBookLibraryOption = "TestTagBookLibraryOption"

    const val TestTagBookSaveButton = "TestTagBookSaveButton"
    const val TestTagBookFillFormDialog = "TestTagBookFillFormDialog"
    const val TestTagBookDismissDialogButton = "TestTagBookDismissDialogButton"
}