package cz.mendelu.pef.xmichl.bookaroo.testTags

object BottomBarTestTags {
    const val TestTagBottomNavLibraries = "TestTagBottomNavLibraries"
    const val TestTagBottomNavMap = "TestTagBottomNavMap"
    const val TestTagBottomNavBooks = "TestTagBottomNavBooks"
}